gitops/tekton-resources/ingress/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-webhook
  namespace: tekton
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: tekton-webhook.apps.k8s.labjp.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-pipelines-webhook
                port:
                  number: 8080
